--- a/web-app/src/app/Pages/search-page/search-page.component.html
+++ b/web-app/src/app/Pages/search-page/search-page.component.html
@@ -11,45 +11,71 @@
         placeholder="Search"
         [(ngModel)]="searchString"
       />
-      <select (change)='selectChangeHandler($event)' name="search-multi" id="searchPage-multi">
+      <select
+        (change)="selectChangeHandler($event)"
+        name="search-multi"
+        id="searchPage-multi"
+      >
         <option value="Title">Search by Title</option>
         <option value="Genre">Search by Genre</option>
         <option value="Year">Search by Year</option>
         <option value="ByActor">Search by Actor/Actress</option>
-        <option value="ForActor">
-          Search for Actor/Actress
-        </option>
+        <option value="ForActor">Search for Actor/Actress</option>
         <option value="Random">Random</option>
       </select>
-      <button (click)="generateFilms()" id="searchPage-button">Generate!</button>
+      <button (click)="generateFilms()" id="searchPage-button">
+        Generate!
+      </button>
     </div>
 
     <app-loading-spinner *ngIf="showSpinner"></app-loading-spinner>
-    <div *ngIf="movieList.length>1 && showMovieList" id="searchMovieList">
+    
+    <div *ngIf="movieList.length > 1 && showMovieList" id="searchMovieList">
       <!--Div to hold the list of movies-->
-
+      <div style="opacity: 0;" id="addedMoviePopup"><div id="addedMovieInnerDiv"><span><p class="addedMovieText">Added </p> <i class="addedMovieText">{{popupMovieTitle}}</i><p class="addedMovieText"> to Watchlist</p></span></div></div>
       <div *ngFor="let movie of movieList" class="searchPageMovieListItem">
-        <!--Div to hold example movie -->
-        <div class="searchPageMovieListItemLeftContent">
-          <img class="movieListImage" src="{{movie['photoSrc']}}" alt="Movie Image"/>
-          
+        <div (click)="openMovieDetailsModal(movie['imdb'])" class="searchPageMovieListItemLeftContent">
+          <!--Div to hold movie image -->
+          <div class="searchPageLeftContentItem">
+            <img
+              class="movieListImage"
+              src="{{ movie['photoSrc'] }}"
+              alt="Movie Image"
+            />
+          </div>
+          <div class="searchPageLeftContentItem">
+            <!--Div to hold content of movie -->
+            <h4 class="searchMovieTitle">{{ movie["title"] }}</h4>
+            <p class="searchPageMovieYear">
+              Released: {{ movie["releaseDate"] }}
+            </p>
+            <p class="searchPageMovieGenre">Genre: {{ movie["genre"] }}</p>
+            <p class="searchPageMovieIMDB">
+              Content Rating: {{ movie["rated"] }}
+            </p>
+            <p class="searchPageMovieIMDB">Director: {{ movie["director"] }}</p>
+            <p class="searchPageMovieIMDB">
+              IMDB Rating: {{ movie["rating"] }}
+            </p>
+          </div>
         </div>
         <div class="searchPageMovieListItemRightContent">
-          <!--Div to hold content of movie -->
-          <h4 class="searchMovieTitle">{{movie['title']}}</h4>
-          <p class="searchPageMovieYear">Released: {{movie['releaseDate']}}</p>
-          <p class="searchPageMovieGenre">Genre: {{movie['genre']}}</p>
-          <p class="searchPageMovieIMDB">Content Rating: {{movie['rated']}}</p>
-          <p class="searchPageMovieIMDB">Director: {{movie['director']}}</p>
-          <p class="searchPageMovieIMDB">IMDB Rating: {{movie['rating']}}</p>
+          <button (click)="addToWatchLater(movie['imdb']); showAddedMoviePopup(movie['title'])" class="searchAddButton"><p class="searchAddButtonText">Add to Watchlist</p></button>
         </div>
       </div>
     </div>
-    <div *ngIf="searched && actorList.length>1 && showActorList" id="actorListContainer">
+    <div
+      *ngIf="searched && actorList.length > 1 && showActorList"
+      id="actorListContainer"
+    >
       <div class="actorImageDiv" *ngFor="let actor of actorList">
         <div class="actorImageInnerDiv">
-          <img src="{{actor['photoURL']}}" class="actorImage" alt="Actor/Actress">
-          <p class="actorName">{{actor['name']}}</p>
+          <img
+            src="{{ actor['photoURL'] }}"
+            class="actorImage"
+            alt="Actor/Actress"
+          />
+          <p class="actorName">{{ actor["name"] }}</p>
         </div>
       </div>
     </div>
