--- a/web-app/src/app/Pages/landing-page/landing-page.component.html
+++ b/web-app/src/app/Pages/landing-page/landing-page.component.html
@@ -1,12 +1,12 @@
 <div id="landingPageMainContent">
   <span><p class="landingPageMainHeader">Let Movie Generator choose </p><p class="landingPageMainHeader">the best movie for you.</p></span>
   <h3>One click. Movie recommended.</h3>
-  <h5>
+  <!-- <h5>
     Want to find the perfect film? Enter your email below to create an
     account.
   </h5>
   <div id="landingPageEmailSubmit">
     <input placeholder="Email address" id="landingPageInput"/>
-    <button id="landingPageInputButton">Create an Account</button>
-  </div>
+    <button  id="landingPageInputButton">Create an Account</button>
+  </div> -->
 </div>
