Added Buttons to link pages together

--- a/web-app/src/app/Pages/landing-page/landing-page.component.html
+++ b/web-app/src/app/Pages/landing-page/landing-page.component.html
@@ -1,6 +1,7 @@
 <div id="landingPageMainContent">
   <span><p class="landingPageMainHeader">Let Movie Generator choose </p><p class="landingPageMainHeader">the best movie for you.</p></span>
   <h3>One click. Movie recommended.</h3>
+  <button id="mainPageButton" routerLink="/main-page">Main Page</button>
   <!-- <h5>
     Want to find the perfect film? Enter your email below to create an
     account.
