--- a/web-app/src/app/Pages/main-page/main-page.component.html
+++ b/web-app/src/app/Pages/main-page/main-page.component.html
@@ -1,7 +1,9 @@
 <div id="actorPageModal">
   <div id="actorPageInnerDiv">
-    <input [(ngModel)]="searchBarText" type="text" name="searchBarText" id="searchBarText"
-      placeholder="Search Movie Generator">
+    <button routerLink="/search-page" id="searchPageButton">Search Movies!</button>
+    <br>
+    <br>
+    <button routerLink="/user-watchlist" id="searchPageButton">Watchlist</button>
       <div id="category">
         <h1>Most Popular Movies</h1>
         <div id="carousel">
