--- a/web-app/src/app/Pages/main-page/main-page.component.scss
+++ b/web-app/src/app/Pages/main-page/main-page.component.scss
@@ -67,3 +67,10 @@ $buttonBorderColor: rgb(138, 43, 226);
   background-color: rgba(0,0,0,0);
   border: none;
 }
+
+#searchPageButton {
+  width: 100%;
+  height: 40px;
+  background-color: #e06a3b;
+  border-radius: 5px;
+}
