--- a/web-app/src/app/components/nav-bar/nav-bar.component.scss
+++ b/web-app/src/app/components/nav-bar/nav-bar.component.scss
@@ -34,3 +34,9 @@ $buttonBackground:  rgb(147, 112, 219);
     padding: 1%;
     border-radius: 5px;
 }
+
+.mainPageButton {
+  width: 30px;
+  height: 30px;
+  color: blue;
+}
