--- a/web-app/src/app/Pages/landing-page/landing-page.component.scss
+++ b/web-app/src/app/Pages/landing-page/landing-page.component.scss
@@ -41,3 +41,10 @@ $buttonBorderColor:  rgb(138, 43, 226);
   border-color: $buttonBorderColor;
   border-radius: 0px 5px 5px 0px;
 }
+
+#mainPageButton {
+  width: 110px;
+  height: 35px;
+  border-radius: 5px;
+  background-color: #e06a3b;
+}
