Add remove from watchlist feature.

--- a/web-app/src/app/components/watchlist-modal/watchlist-modal.component.html
+++ b/web-app/src/app/components/watchlist-modal/watchlist-modal.component.html
@@ -15,6 +15,7 @@
         <h1 *ngIf="modalData.metascore != null" id="modal-info">Metascore: {{ modalData.metascore }}</h1>
         <h1 *ngIf="modalData.boxOffice != null" id="modal-info">Box Office: {{ modalData.boxOffice }}</h1>
         <button *ngIf="modalData.showAddToWatchlist" id="watchlistButton" (click)="addToWatchlist(modalData.movieID)">Add To Watchlist</button>
+        <button *ngIf="modalData.showRemoveFromWatchlist" id="watchlistButton" (click)="removeFromWatchlist(modalData.movieID)">Remove From Watchlist</button>
     </section>
     <br>
 </div>
