Add Watchlist button to search page

--- a/web-app/src/app/Pages/search-page/search-page.component.html
+++ b/web-app/src/app/Pages/search-page/search-page.component.html
@@ -5,6 +5,9 @@
     <!--Div to hold the content-->
     <div id="searchPage-searchDiv">
       <!--Search Div-->
+      <button id="searchPage-button" routerLink="/user-watchlist">
+        WatchList!
+      </button>
       <input
         type="email"
         id="searchPage-input"
